crates/next-custom-transforms/tests/errors/server-actions/server-graph/2/input.js
'use strict'

// comment

'use server'

export function bar() {}
